--- a/task.html
+++ b/task.html
@@ -1,50 +1,61 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <title>자기소개서</title>
-  <link rel="stylesheet" type="text/css" href="taskCSS.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>자기소개</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <h1>신우성-자기소개서</h1>
-  <hr>
-  <h2>목차</h2>
-  <p>
+  <body>
+    <div class="container">
+      <div class="container1" style="margin: 30px">
+        <img class="profile" src="profile.jpg">
+      </div>
+      
+    </div>
+    <hr>
+    <div style="margin-left: 50px">
+      <h2>Name</h2>
+      <div>
+        신우성
+      </div>
+    </div>
+    <div style="margin-left: 50px">
+      <h2>Instagram</h2>
+      <div>
+        @Wuxxeong
+      </div>
+    </div>
     
-    <ol type="1">
-      <li><a href = "#chap1">인적사항</a></li>
-      <li><a href="#chap2">좋아하는 음악</a></li>
-    </ol>
-  </p>
-  <h2><a id = "chap1">인적사항</a></h2>
-  <p>
-    이름: 신우성<br>
-    나이: 24세<br>
-    학교: <a href="http://www.hufs.ac.kr" target="_blank">한국외국어대학교</a><br>
-    전공: 컴퓨터전자시스템공학부<br>
-    MBTI: ISTJ<br>
-    취미: <a href="#chap2">노래듣기, <a href="#chap3">여행</a>
-  </p>
-  <h2><a id="chap2">좋아하는 음악</a></h2>
-  <p>
-    시기마다 여러가지 다양한 음악을 접한 저는 매번 다른 음악을 좋아했습니다.<br>
-    그 중 요즘 많이 듣는 음악을 장르에 따라 몇가지 추천드릴까 합니다.<br>
-    <ul>
-      <li><strong><h3>힙합 </h3><a href="https://namu.wiki/w/%EA%B9%80%EC%8A%B9%EB%AF%BC(%EB%9E%98%ED%8D%BC)" target="_blank">김승민</a> - 내 기쁨은 너가 벤틀리를 끄는거야</strong></li>
-      최근에 알게 된 노래로 감성 hiphop장르로 듣기 좋은 노래입니다.<br>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/nhpteF75kg8" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-      </iframe>
-      <li><strong><h3>y2k(옛날노래)</h3><a href="https://namu.wiki/w/%ED%85%8C%EC%9D%B4" target="_blank">테이</a> - 같은베게</strong></li>
-      이 노래는 예전 '싸이월드'라는 미니홈피 사이트가 성행할 당시 유행했던 노래로,<br>
-      최근 코인 노래방을 함께 갔던 친구를 통해 다시 듣게 되어 요즘 들어 다시 듣기 시작했습니다.<br>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/RF_PZ2pf2Fs" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-      </iframe>
-    </ul>
+    <div style="margin-left: 50px">
+      <h2>Intoduce</h2>
+      <div>
+        안녕하세요! 컴퓨터.전자시스템공학을 전공중인 신우성입니다.<br>
+        세상을 바꾸는 개발자가 되고싶습니다!!<br>
+      </div>
+    </div>
+    <div style="margin-left: 50px">
+      <h2>MBTI</h2>
+      <div>
+        ISTJ
+      </div>
+    </div>
+    <div style="margin-left: 50px">
+      <h2 id=>Major</h2>
+      <div>
+        Computer.Electronic Engineering System
+      </div>
+    </div>
+    <div style="margin-left: 50px">
+      <h2 >Hobby</h2>
+      <div>
+        <li>축구</li>
+        <li>헬스</li>
+        <li>coding......도전....?</li>
+      </div>
+    </div>
+  </body>
 </body>
-
 </html>
